--- a/import.html
+++ b/import.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Importation | Divine Healthcare</title>
-  <link rel="stylesheet" href="import.css" />
+  <link rel="stylesheet" href="./styles/import.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     /* Minimal, form-specific helper styles (copied from index.html) */
@@ -82,7 +82,7 @@
   <nav class="navbar">
     <div class="container">
       <a href="index.html" class="brand-logo">
-        <img src="logo.png" alt="Divine Healthcare Logo">
+        <img src="./assets/logo.png" alt="Divine Healthcare Logo">
       </a>
       <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
         <span class="line"></span>
@@ -111,7 +111,7 @@
     ====================== -->
   <header class="hero">
     <div class="hero-image">
-      <img src="home-img.avif" alt="Doctor writing prescription">
+      <img src="./assets/home-img.avif" alt="Doctor writing prescription">
     </div>
 
     <div class="overlay">
@@ -486,18 +486,18 @@ Message: ${formData.message || 'N/A'}`;
 
     <div class="about-cards">
       <div class="card">
-        <img src="parcels.png" alt="Health Authority" />
+        <img src="./assets/parcels.png" alt="Health Authority" />
         <p data-i18n="who.cards.receive"><strong>Recibe tu producto</strong> en un plazo de 15 a 21 días laborables.</p>
       </div>
 
       <div class="card">
-        <img src="tick.png" alt="Health Authority" />
+        <img src="./assets/tick.png" alt="Health Authority" />
         <p data-i18n="who.cards.comply"><strong>Cumple </strong> con la normativa establecida por el Instituto de Salud
           Pública de Chile.</p>
       </div>
 
       <div class="card">
-        <img src="international.png" alt="International Supply" />
+        <img src="./assets/international.png" alt="International Supply" />
         <p data-i18n="who.cards.suppliers"><strong>Proveedores internacionales autorizados</strong> y aprobados por las
           autoridades sanitarias de sus respectivos países.</p>
       </div>
@@ -509,23 +509,23 @@ Message: ${formData.message || 'N/A'}`;
       </div>
 
       <div class="card">
-        <img src="badge.png" alt="Specialty Meds" />
+        <img src="./assets/badge.png" alt="Specialty Meds" />
         <p data-i18n="who.cards.experience"><strong>25 años</strong> de experiencia importando</p>
       </div>
 
       <div class="card">
-        <img src="delivery.png" alt="Specialty Meds" />
+        <img src="./assets/delivery.png" alt="Specialty Meds" />
         <p data-i18n="who.cards.shipping"><strong>Envíos a todo Chile</strong>con y sin cadena de frío.</p>
       </div>
 
       <div class="card">
-        <img src="doctor.png" alt="Specialty Meds" />
+        <img src="./assets/doctor.png" alt="Specialty Meds" />
         <p data-i18n="who.cards.pharmacist"><strong>Contamos con un Químico Farmacéutico</strong> que supervisa el
           proceso.</p>
       </div>
 
       <div class="card">
-        <img src="hospital.png" alt="Specialty Meds" />
+        <img src="./assets/hospital.png" alt="Specialty Meds" />
         <p data-i18n="who.cards.attention"><strong>Atención</strong> a clínicas, hospitales y pacientes particulares.
         </p>
       </div>
@@ -556,27 +556,27 @@ Message: ${formData.message || 'N/A'}`;
   <section class="serve-section" id="who-we-serve">
     <div class="serve-grid">
       <div class="serve-card">
-        <img src="serve1.png" alt="Hospitals">
+        <img src="./assets/serve1.png" alt="Hospitals">
         <p data-i18n="serve.cards.hospitals"><strong>Hospitales</strong></p>
       </div>
       <div class="serve-card">
-        <img src="serve2.png" alt="Clinics">
+        <img src="./assets/serve2.png" alt="Clinics">
         <p data-i18n="serve.cards.clinics"><strong>Clínicas</strong></p>
       </div>
       <div class="serve-card">
-        <img src="serve3.png" alt="Groups">
+        <img src="./assets/serve3.png" alt="Groups">
         <p data-i18n="serve.cards.groups"><strong>Grupos o <br> asociaciones de pacientes</strong></p>
       </div>
       <div class="serve-card">
-        <img src="serve4.png" alt="Private Patients">
+        <img src="./assets/serve4.png" alt="Private Patients">
         <p data-i18n="serve.cards.private"><strong>Pacientes privados</strong></p>
       </div>
       <div class="serve-card">
-        <img src="serve5.png" alt="Other Institutions">
+        <img src="./assets/serve5.png" alt="Other Institutions">
         <p data-i18n="serve.cards.other_institutions"><strong>Otras instituciones <br> de salud</strong></p>
       </div>
       <div class="serve-card">
-        <img src="serve6.png" alt="Other Institutions">
+        <img src="./assets/serve6.png" alt="Other Institutions">
         <p data-i18n="serve.cards.pharmacy"><strong>Farmacia</strong></p>
       </div>
     </div>
@@ -608,28 +608,28 @@ Message: ${formData.message || 'N/A'}`;
   <section class="import-process" id="import-process">
     <div class="steps-grid">
       <div class="step">
-        <img src="import2.png" alt="Quotation">
+        <img src="./assets/import2.png" alt="Quotation">
         <h3 data-i18n="import.process.step1">Solicitud de cotización</h3>
       </div>
       <div class="step">
-        <img src="import1.png" alt="Acceptance">
+        <img src="./assets/import1.png" alt="Acceptance">
         <h3 data-i18n="import.process.step2">Aceptación de cotización</h3>
       </div>
       <div class="step">
-        <img src="import 3.png" alt="Documentation">
+        <img src="./assets/import 3.png" alt="Documentation">
         <h3 data-i18n="import.process.step3">Presentar documentación <br> para la importación</h3>
       </div>
       <div class="step">
-        <img src="import4.png" alt="Progress">
+        <img src="./assets/import4.png" alt="Progress">
         <h3 data-i18n="import.process.step4">Pedido en proceso</h3>
       </div>
       <div class="step">
-        <img src="import5.png" alt="Transport">
+        <img src="./assets/import5.png" alt="Transport">
         <h3 data-i18n="import.process.step5">Transporte Internacional,<br>resolución de ISP y<br>despacho de aduanas
         </h3>
       </div>
       <div class="step">
-        <img src="import6.png" alt="Delivery">
+        <img src="./assets/import6.png" alt="Delivery">
         <h3 data-i18n="import.process.step6">Entrega</h3>
       </div>
     </div>
@@ -644,23 +644,23 @@ Message: ${formData.message || 'N/A'}`;
     <!-- 1st card-->
     <div class="doc-grid">
       <div class="doc-item">
-        <div class="icon-circle"><img src="prescription.png" alt=""></div>
+        <div class="icon-circle"><img src="./assets/prescription.png" alt=""></div>
         <h4 data-i18n="doc.item.prescription">1. Receta médica</h4>
       </div>
       <!-- 2nd card-->
       <div class="doc-item">
-        <div class="icon-circle"><img src="id.png" alt=""></div>
+        <div class="icon-circle"><img src="./assets/id.png" alt=""></div>
         <h4 data-i18n="doc.item.id_copy">2. Fotocopia del documento de identidad</h4>
       </div>
       <!-- 3rd card-->
       <div class="doc-item">
-        <div class="icon-circle"><img src="agreement.png" alt=""></div>
+        <div class="icon-circle"><img src="./assets/agreement.png" alt=""></div>
         <h4 data-i18n="doc.item.poa">3. Poder notarial simple</h4>
         <p data-i18n="doc.item.poa_note">Firmado por el paciente o un miembro de la familia</p>
       </div>
       <!-- This is now the 4th card (originally 5th) -->
       <button id="downloadPoaBtn" class="poa-download-btn doc-item">
-        <div class="icon-circle"><img src="download.png" alt=""></div>
+        <div class="icon-circle"><img src="./assets/download.png" alt=""></div>
         <h4 data-i18n="doc.item.download_poa">4. Descargar Poder Notarial Simple</h4>
       </button>
     </div>
@@ -839,7 +839,7 @@ Message: ${formData.message || 'N/A'}`;
 
     <button id="openModalBtn" style="color: white; border: none; cursor: pointer;">
       <div class="doc-item" id="prescriptionBtn">
-        <div class="icon-circle"><img src="download.png" alt="" data-i18n="doc.info.upload.image"></div>
+        <div class="icon-circle"><img src="./assets/download.png" alt="" data-i18n="doc.info.upload.image"></div>
         <h4 data-i18n="doc.info.upload">Información de carga</h4>
         <p data-i18n="doc.info.subtitle">que la receta debe incluir</p>
     </button>
@@ -1495,7 +1495,7 @@ Message: ${formData.message || 'N/A'}`;
     <div class="footer-container">
       <div class="footer-main">
         <div class="footer-brand">
-          <img src="logo2.png" alt="Divine Healthcare Logo" class="footer-logo">
+          <img src="./assets/logo2.png" alt="Divine Healthcare Logo" class="footer-logo">
           <p class="footer-description" data-i18n="footer.description">
             Nuestra Visión es que nuestros productos posean certificación emitida
             por las más altas agencias reguladoras manteniendo precios asequibles
