--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="./styles/about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>About Us | Divine Healthcare</title>
     <style>
@@ -51,7 +51,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="index.html" class="brand-logo">
-                    <img src="logo.png" alt="Divine Healthcare Logo">
+                    <img src="./assets/logo.png" alt="Divine Healthcare Logo">
                 </a>
                 <button class="hamburger" aria-label="Toggle navigation" onclick="toggleNav()">
                     <span class="line"></span>
@@ -158,13 +158,13 @@
 
                 <div class="cert-logos-container">
                     <div class="cert-logos">
-                        <img src="FDA.jpg" alt="FDA Approved" class="cert-logo">
+                        <img src="./assets/FDA.jpg" alt="FDA Approved" class="cert-logo">
                     </div>
                     <div class="cert-logos">
-                        <img src="gmp.png" alt="PICS" class="cert-logo">
+                        <img src="./assets/gmp.png" alt="PICS" class="cert-logo">
                     </div>
                     <div class="cert-logos">
-                        <img src="pics.png" alt="GMP" class="cert-logo">
+                        <img src="./assets/pics.png" alt="GMP" class="cert-logo">
                     </div>
                 </div>
 
@@ -193,7 +193,7 @@
                         </p>
                     </div>
                     <div class="image-content">
-                        <img src="aboutt.svg" alt="About Divine Healthcare" class="floating-image">
+                        <img src="./assets/aboutt.svg" alt="About Divine Healthcare" class="floating-image">
                     </div>
                 </div>
             </div>
@@ -209,7 +209,7 @@
         <div class="footer-container">
             <div class="footer-main">
                 <div class="footer-brand">
-                    <img src="logo.png" alt="Divine Healthcare Logo" class="footer-logo">
+                    <img src="./assets/logo.png" alt="Divine Healthcare Logo" class="footer-logo">
                     <p class="footer-description" data-i18n="footer.description">
                         Nuestra Visión es que nuestros productos posean certificación emitida por las más altas agencias
                         reguladoras manteniendo precios asequibles para las instituciones y pacientes con más de 2
@@ -367,8 +367,10 @@
                         formData.append('user_details', userDetails);
 
                         // Loading state
-                        const originalText = submitBtn.textContent;
-                        submitBtn.textContent = (document.documentElement.getAttribute('lang') === 'en') ? 'Sending…' : 'Enviando…';
+                        const originalText = submitBtn.innerHTML; // save current HTML
+                        submitBtn.innerHTML = (document.documentElement.getAttribute('lang') === 'en')
+                            ? '<i class="fas fa-spinner fa-spin"></i> Sending…'
+                            : '<i class="fas fa-spinner fa-spin"></i> Enviando…';
                         submitBtn.setAttribute('disabled', 'disabled');
                         form.setAttribute('aria-busy', 'true');
 
@@ -383,19 +385,34 @@
                                 okBanner.style.display = 'block';
                                 form.reset();
                                 restorePlaceholders();
+
+                                // Hide success message after 5 seconds
+                                setTimeout(() => {
+                                    okBanner.style.display = 'none';
+                                }, 5000);
+
                             } else {
                                 // Try to parse JSON error from FormSubmit; fallback to generic
                                 let errMsg = (document.documentElement.getAttribute('lang') === 'en') ? 'Form submission failed. Please try again.' : 'No se pudo enviar el formulario. Inténtalo de nuevo.';
                                 try { const j = await response.json(); if (j && j.message) errMsg = j.message; } catch (_) { }
                                 errBanner.textContent = errMsg;
                                 errBanner.style.display = 'block';
+
+                                setTimeout(() => {
+                                    errBanner.style.display = 'none';
+                                }, 5000);
                             }
                         } catch (err) {
                             console.error(err);
                             errBanner.textContent = (document.documentElement.getAttribute('lang') === 'en') ? 'Network error. Please check your connection and try again.' : 'Error de red. Verifique su conexión e inténtelo nuevamente.';
                             errBanner.style.display = 'block';
+
+                            setTimeout(() => {
+                                errBanner.style.display = 'none';
+                            }, 5000);
+
                         } finally {
-                            submitBtn.textContent = originalText;
+                            submitBtn.innerHTML = originalText;  // restore original button content (with icons)
                             submitBtn.removeAttribute('disabled');
                             form.removeAttribute('aria-busy');
                         }
