--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Divine Healthcare</title>
     <style>
@@ -67,7 +67,7 @@
                         <span data-i18n="lang.spanish">Español</span>
                     </a>
                     <a href="#" class="language-option" data-lang="en">
-                        <img src="icons8-united-kingdom-48.png" alt="English" class="flag-icon">
+                        <img src="./assets/icons8-united-kingdom-48.png" alt="English" class="flag-icon">
                         <span data-i18n="lang.english">Inglés</span>
                     </a>
                 </div>
@@ -78,7 +78,7 @@
         <nav class="navbar">
             <div class="container">
                 <a href="index.html" class="brand-logo">
-                    <img src="logo.png" alt="Divine Healthcare Logo">
+                    <img src="./assets/logo.png" alt="Divine Healthcare Logo">
                 </a>
                 <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
                     <span class="line"></span>
@@ -106,7 +106,7 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-image">
-                <img src="homeimage.jpeg" alt="Divine Healthcare">
+                <img src="./assets/homeimage.jpeg" alt="Divine Healthcare">
             </div>
             <div class="hero-overlay"></div>
             <div class="hero-content">
@@ -119,7 +119,7 @@
             <div class="video-container">
                 <div class="video-wrapper">
                     <video autoplay loop muted playsinline>
-                        <source src="infra.mp4" type="video/mp4">
+                        <source src="./assets/infra.mp4" type="video/mp4">
                         <!-- Add additional source formats if needed -->
                         <span data-i18n="home.video.fallback">Su navegador no soporta la etiqueta de video.</span>
                     </video>
@@ -173,7 +173,7 @@
         <div class="footer-container">
             <div class="footer-main">
                 <div class="footer-brand">
-                    <img src="logo2.png" alt="Divine Healthcare Logo" class="footer-logo">
+                    <img src="./assets/logo2.png" alt="Divine Healthcare Logo" class="footer-logo">
                     <p class="footer-description" data-i18n="footer.description">
                         Nuestra Visión es que nuestros productos posean certificación emitida
                         por las más altas agencias reguladoras manteniendo precios asequibles
@@ -331,8 +331,10 @@
                         formData.append('user_details', userDetails);
 
                         // Loading state
-                        const originalText = submitBtn.textContent;
-                        submitBtn.textContent = (document.documentElement.getAttribute('lang') === 'en') ? 'Sending…' : 'Enviando…';
+                        const originalText = submitBtn.innerHTML; // save current HTML
+                        submitBtn.innerHTML = (document.documentElement.getAttribute('lang') === 'en')
+                            ? '<i class="fas fa-spinner fa-spin"></i> Sending…'
+                            : '<i class="fas fa-spinner fa-spin"></i> Enviando…';
                         submitBtn.setAttribute('disabled', 'disabled');
                         form.setAttribute('aria-busy', 'true');
 
@@ -347,19 +349,34 @@
                                 okBanner.style.display = 'block';
                                 form.reset();
                                 restorePlaceholders();
+
+                                // Hide success message after 5 seconds
+                                setTimeout(() => {
+                                    okBanner.style.display = 'none';
+                                }, 5000);
+
                             } else {
                                 // Try to parse JSON error from FormSubmit; fallback to generic
                                 let errMsg = (document.documentElement.getAttribute('lang') === 'en') ? 'Form submission failed. Please try again.' : 'No se pudo enviar el formulario. Inténtalo de nuevo.';
                                 try { const j = await response.json(); if (j && j.message) errMsg = j.message; } catch (_) { }
                                 errBanner.textContent = errMsg;
                                 errBanner.style.display = 'block';
+
+                                setTimeout(() => {
+                                    errBanner.style.display = 'none';
+                                }, 5000);
                             }
                         } catch (err) {
                             console.error(err);
                             errBanner.textContent = (document.documentElement.getAttribute('lang') === 'en') ? 'Network error. Please check your connection and try again.' : 'Error de red. Verifique su conexión e inténtelo nuevamente.';
                             errBanner.style.display = 'block';
+
+                            setTimeout(() => {
+                                errBanner.style.display = 'none';
+                            }, 5000);
+                            
                         } finally {
-                            submitBtn.textContent = originalText;
+                            submitBtn.innerHTML = originalText;  // restore original button content (with icons)
                             submitBtn.removeAttribute('disabled');
                             form.removeAttribute('aria-busy');
                         }
