--- a/infrastructure.html
+++ b/infrastructure.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="infra.css">
+    <link rel="stylesheet" href="./styles/infra.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Infrastructure | Divine Healthcare</title>
     <style>
@@ -51,7 +51,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="index.html" class="brand-logo">
-                    <img src="logo.png" alt="Divine Healthcare Logo">
+                    <img src="./assets/logo.png" alt="Divine Healthcare Logo">
                 </a>
                 <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
                     <span class="line"></span>
@@ -103,7 +103,7 @@
                         cliente tiene valor y es esencial para nuestro crecimiento.</p>
                 </div>
                 <div class="image-content">
-                    <img src="building.jpg" alt="Divine Healthcare Facility" class="featured-image">
+                    <img src="./assets/building.jpg" alt="Divine Healthcare Facility" class="featured-image">
                 </div>
             </div>
         </section>
@@ -162,7 +162,7 @@
         <div class="footer-container">
             <div class="footer-main">
                 <div class="footer-brand">
-                    <img src="logo.png" alt="Divine Healthcare Logo" class="footer-logo">
+                    <img src="./assets/logo.png" alt="Divine Healthcare Logo" class="footer-logo">
                     <p class="footer-description" data-i18n="footer.description">
                         Nuestra Visión es que nuestros productos posean certificación emitida por
                         las más altas agencias reguladoras manteniendo precios asequibles para las
@@ -320,8 +320,10 @@
                         formData.append('user_details', userDetails);
 
                         // Loading state
-                        const originalText = submitBtn.textContent;
-                        submitBtn.textContent = (document.documentElement.getAttribute('lang') === 'en') ? 'Sending…' : 'Enviando…';
+                        const originalText = submitBtn.innerHTML; // save current HTML
+                        submitBtn.innerHTML = (document.documentElement.getAttribute('lang') === 'en')
+                            ? '<i class="fas fa-spinner fa-spin"></i> Sending…'
+                            : '<i class="fas fa-spinner fa-spin"></i> Enviando…';
                         submitBtn.setAttribute('disabled', 'disabled');
                         form.setAttribute('aria-busy', 'true');
 
@@ -336,19 +338,34 @@
                                 okBanner.style.display = 'block';
                                 form.reset();
                                 restorePlaceholders();
+
+                                // Hide success message after 5 seconds
+                                setTimeout(() => {
+                                    okBanner.style.display = 'none';
+                                }, 5000);
+
                             } else {
                                 // Try to parse JSON error from FormSubmit; fallback to generic
                                 let errMsg = (document.documentElement.getAttribute('lang') === 'en') ? 'Form submission failed. Please try again.' : 'No se pudo enviar el formulario. Inténtalo de nuevo.';
                                 try { const j = await response.json(); if (j && j.message) errMsg = j.message; } catch (_) { }
                                 errBanner.textContent = errMsg;
                                 errBanner.style.display = 'block';
+
+                                setTimeout(() => {
+                                    errBanner.style.display = 'none';
+                                }, 5000);
                             }
                         } catch (err) {
                             console.error(err);
                             errBanner.textContent = (document.documentElement.getAttribute('lang') === 'en') ? 'Network error. Please check your connection and try again.' : 'Error de red. Verifique su conexión e inténtelo nuevamente.';
                             errBanner.style.display = 'block';
+
+                            setTimeout(() => {
+                                errBanner.style.display = 'none';
+                            }, 5000);
+
                         } finally {
-                            submitBtn.textContent = originalText;
+                            submitBtn.innerHTML = originalText;  // restore original button content (with icons)
                             submitBtn.removeAttribute('disabled');
                             form.removeAttribute('aria-busy');
                         }
