--- a/import.html
+++ b/import.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Importation | Divine Healthcare</title>
   <link rel="stylesheet" href="./styles/import.css" />
+  <link rel="icon" type="image/png" href="./assets/favicon.png" id="favicon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     /* Minimal, form-specific helper styles (copied from index.html) */
